--- a/components/Navbar/navbar.module.scss
+++ b/components/Navbar/navbar.module.scss
@@ -8,7 +8,7 @@
     height: 100%;
     display: flex;
     flex-direction: row;
-    color: #7dbc83;
+    color: #6b8b6e;
     font-family: "Cabin", sans-serif;
     font-family: "Fira Code", monospace;
     font-weight: 500;
