--- a/pages/contacts/styles.module.scss
+++ b/pages/contacts/styles.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
   width: 100%;
+  max-width: 100%;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -15,7 +16,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
 
     textarea {
       resize: none;
@@ -51,20 +52,37 @@
   }
   .codeWrapper {
     width: 50%;
-    max-width: 50%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+
     .code {
-      max-width: 800px;
-      padding: 200px;
+      padding: 20px;
+      width: 90%;
+      height: 60%;
+
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+
+      -ms-word-break: break-all;
+      /* This is the dangerous one in WebKit, as it breaks things wherever */
+      word-break: break-all;
+      /* Instead use this non-standard one: */
+      word-break: break-word;
+
+      /* Adds a hyphen where the word breaks, if supported (No Blink) */
+      -ms-hyphens: auto;
+      -moz-hyphens: auto;
+      -webkit-hyphens: auto;
+      hyphens: auto;
+
+      max-width: 550px;
       background: rgba(31, 26, 31, 0.75);
       box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
       backdrop-filter: blur(4.5px);
       -webkit-backdrop-filter: blur(4.5px);
       border-radius: 10px;
-
       gap: 50px;
       display: flex;
       align-items: center;
