--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,9 +30,10 @@ body {
 
 body {
   
-  background-image: url(../public/background.jpg);
+  /* background-image: url(../public/background.jpg);
+  ba */
   background-size:cover;
-  
+  background-color: #1c1628;
 }
 
 a {
