--- a/pages/contacts/styles.module.scss
+++ b/pages/contacts/styles.module.scss
@@ -9,7 +9,7 @@
   font-family: "Cabin", sans-serif;
   font-family: "Fira Code", monospace;
   font-weight: 500;
-  // padding-left: 10vw;
+
   input[type="submit"],
   button {
     height: 40px;
@@ -30,7 +30,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 15px;
 
     h1 {
       color: rgb(170, 219, 159);
@@ -113,5 +113,13 @@
         margin-top: 10px;
       }
     }
+  }
+  textarea:focus,
+  input:focus {
+    outline: none;
+    border: 1px solid rgb(118, 95, 175);
+    -webkit-box-shadow: inset 0 0 5px #000;
+    -moz-box-shadow: inset 0 0 5px #350e5ae4;
+    box-shadow: inset 0 0 5px #000;
   }
 }
